Sun Nov 15 13:18:38 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/lexgrog-1, src/tests/man-1, src/tests/manconv-1,
	  src/tests/manconv-2, src/tests/mandb-1, src/tests/mandb-2: Use
	  'diff -u', which produces more helpful output on failures.

Sat Nov 14 20:10:57 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* README (System specific notes): Remove entirely. The notes about
	  Linux here only pertain to thoroughly obsolete systems.

Sat Nov 14 20:08:40 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Handle Ultrix-4.3a -YPOSIX requirement
	  automatically.
	* README (System specific notes): Remove note about Ultrix-4.3a.

Sat Nov 14 19:14:02 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/README: Copyright is not the same as licensing; fix confusion.

Sat Nov 14 18:57:42 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Add --nh and --nj aliases for
	  --no-hyphenation and --no-justification respectively.
	* man/man1/man.man1 (Controlling formatted output): Document new
	  aliases.

Sat Nov 14 18:52:15 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (argstr_get_word): Fix a small memory leak.

Sat Nov 14 18:51:37 GMT 2009  Colin Watson  <cjwatson@debian.org>

	Do what the user probably means when the full path to an executable
	is given as an argument (Debian bug #505465).

	* lib/pathsearch.c (directory_on_path): New function.
	* lib/pathsearch.h (directory_on_path): Add prototype.
	* src/manp.c (get_manpath_from_path): Make external. Add 'mandatory'
	  argument to control the addition of MANDATORY_MANPATH entries.
	  (guess_manpath): Update caller.
	* src/manp.h (get_manpath_from_path): Add prototype.
	* src/man.c (main): Move locale manpath expansion to ...
	  (locale_manpath): ... here (new function).
	  (local_man_loop): If the argument is an executable, try looking up
	  the corresponding manual page in the appropriate part of the